Fixed the alignment for the field-reset, added height

--- a/style.css
+++ b/style.css
@@ -2085,6 +2085,7 @@ textarea.input-controller {
   margin: -0.5rem -0.5rem -0.5rem 0;
   padding: 0.5rem 0.5rem 0.5rem 0.5rem;
   margin-right: -1rem;
+  height: auto;
 }
 
 .field-reset:before {
